'Upgraded Vertx to 5.0.4, can use jdk24+'