@@ -13,7 +13,7 @@ plugins {
     // Apply the application plugin to add support for building a CLI application
     id "application"
 
-    id "com.github.johnrengelman.shadow" version "8.1.1"
+    id "com.gradleup.shadow" version "9.1.0"
 
     id "nu.studer.jooq" version "8.0"
 
@@ -47,13 +47,13 @@ java {
     sourceCompatibility = JavaVersion.VERSION_21
     targetCompatibility = JavaVersion.VERSION_21
 }
-println("Java Version: " + JavaVersion.current())
+println("Java Version: " + JavaVersion.current()+" -- target: " + java.targetCompatibility)
 ext {
-    vertxVersion = "5.0.2"
+    vertxVersion = "5.0.4"
     junitJupiterEngineVersion = "5.10.2"
     jooqVersion = "3.19.3"
     protoVersion = "3.25.5"
-    hibernateVersion = "7.0.5.Final"
+    hibernateVersion = "7.0.10.Final"
 }
 
 java {
@@ -123,6 +123,7 @@ dependencies {
     implementation "com.microsoft.sqlserver:mssql-jdbc:12.10.1.jre11"
     implementation "jakarta.persistence:jakarta.persistence-api:3.2.0"
 
+    runtimeOnly group: 'com.h2database', name: 'h2', version: '2.3.232'
     runtimeOnly "org.glassfish.jersey.media:jersey-media-json-binding:3.1.10"
     runtimeOnly "org.glassfish.expressly:expressly:6.0.0"
 
@@ -154,6 +155,14 @@ tasks.withType(JavaCompile).configureEach {
     options.compilerArgs << "-Xlint:deprecation"
     if(project.hasProperty("compiler.prop")) {
 	    options.compilerArgs << project.property("compiler.prop")
+    }
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += ["--enable-native-access=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED"]
+
+    if(java.targetCompatibility >= JavaVersion.VERSION_24) {
+        jvmArgs += ["--sun-misc-unsafe-memory-access=allow"]
     }
 }
 
@@ -194,6 +203,12 @@ run {
     } else if(System.getProperty("GRPC_SERVER") == "false") {
         environment "GRPC_SERVER", "false"
     }
+
+    jvmArgs += ["--enable-native-access=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED"]
+    if(java.targetCompatibility  >= JavaVersion.VERSION_24) {
+        jvmArgs += "--sun-misc-unsafe-memory-access=allow"
+    }
+
     args = ['run', mainVerticleName,  debug, "--redeploy=$watchForChange", "--launcher-class=$mainClassName",
             "--on-redeploy=$doOnChange", "--conf=src/main/resources/application-conf.json",
             cache]
@@ -246,8 +261,13 @@ jar {
 shadowJar {
   zip64 = true
   archiveClassifier = "prod"
+
+  if (System.getenv("DEFAULT_DB") == null || System.getenv("DEFAULT_DB") == "h2") {
+      duplicatesStrategy = DuplicatesStrategy.INCLUDE
+  }
+
   mergeServiceFiles {
-    include "META-INF/services/io.vertx.core.spi.VerticleFactory"
+      include "META-INF/services/io.vertx.core.spi.VerticleFactory"
   }
 
   manifest{
